--- a/client/src/components/categories.scoped.scss
+++ b/client/src/components/categories.scoped.scss
@@ -1,7 +1,10 @@
 // CSS HERE
 .margin{
-    margin-left: auto;
-    margin-top: 50px
+    display: center;
+    justify-content: center;
+    margin-top: 50px;
+    max-width: 500px;
+    min-width: 150px;
 }
 
 button{
