--- a/client/src/components/categories.scoped.scss
+++ b/client/src/components/categories.scoped.scss
@@ -1,15 +1,14 @@
 // CSS HERE
 .margin{
-    display: center;
-    justify-content: center;
+    display: grid;
+    justify-content: space-around;
     margin-top: 50px;
     max-width: 500px;
-    min-width: 150px;
 }
 
 button{
    
-   padding: 20px;
+   padding: 10px;
    margin: 50px;
    color: white;
    background-color: rgb(17, 13, 13);
